--- a/concepts/core-architecture/architecture-overview.mdx
+++ b/concepts/core-architecture/architecture-overview.mdx
@@ -1,194 +1,204 @@
 ---
-title: "GoogleTest Architecture Overview"
-description: "Gain a holistic view of GoogleTest’s architecture, exploring its xUnit foundations, modular test structure, and seamless support for automated test discovery. Understand how test suites, fixtures, and the test runner interact to provide a scalable and repeatable test environment."
+title: "Architecture Overview"
+description: "Get a high-level tour of how GoogleTest and GoogleMock are organized, the key classes and macros provided, and the overall lifecycle of running unit tests. Understand the responsibilities of major components and how they collaborate to provide reliable, expressive C++ testing."
 ---
 
-# GoogleTest Architecture Overview
+# Architecture Overview
 
-Gain a holistic view of GoogleTest’s architecture, exploring how its xUnit foundations, modular test structure, and automated test discovery work together. Understand the interplay between test suites, fixtures, and the test runner in delivering scalable, repeatable, and maintainable testing.
-
+Gain a strategic understanding of how GoogleTest and GoogleMock are structured, the key classes and macros they provide, and their orchestration in the lifecycle of running unit tests. This overview reveals the collaborative roles of major components, helping you grasp how the framework supports reliable, expressive testing in C++.
 
 ---
 
 ## Introduction
 
-GoogleTest builds on the xUnit architecture to offer a robust C++ testing framework, designed to facilitate automated, structured, and modular unit testing. This page covers the overall architecture to help you grasp how GoogleTest enables efficient test writing, discovery, and execution.
+GoogleTest and GoogleMock form a comprehensive C++ testing framework designed to offer a seamless experience for writing, organizing, and executing tests with clear reporting and extensive customization opportunities. This architecture overview unpacks the core abstractions, illustrating how the system manages test cases, fixtures, suites, execution, and mocking behaviors.
 
-Understanding this architecture empowers you to write better tests, organize them effectively, and leverage GoogleTest's integrated mechanisms to scale testing across large projects.
+Understanding the architecture empowers you to use the framework more effectively, troubleshoot complex scenarios, and eventually extend the framework if needed.
 
+---
 
-## Architecture Foundations: The xUnit Model
+## Key Components of GoogleTest
 
-At its core, GoogleTest follows the xUnit architecture pattern familiar to many testing frameworks such as JUnit or PyUnit. The key components of this pattern include:
+### 1. Tests and Test Suites
 
-- **Tests:** Basic units of verification. Each tests a particular behavior or output.
-- **Test Suites:** Logical groups of related tests, allowing shared setup and teardown.
-- **Test Fixtures:** Specialized classes that provide common test context, reusing setup across multiple tests.
-- **Test Runner:** Orchestrates test discovery, execution, and result reporting.
+At the heart of GoogleTest are **tests** — units of verification defined by the user — and **test suites** (formerly called test cases), which group related tests together. Each test is encapsulated by a `TestInfo` object, while test suites are represented by `TestSuite` objects.
 
-GoogleTest’s adherence to this model ensures that tests are isolated, repeatable, and organized. It also provides the fundamental layer required for advanced features like parameterized tests and mocking.
+- **Test (`testing::Test`)**: The base abstract class from which all test fixtures derive. It provides lifecycle hooks like `SetUp()`, `TearDown()`, and static methods `SetUpTestSuite()` and `TearDownTestSuite()` for shared setup/teardown across the entire suite.
+- **Test Suite (`testing::TestSuite`)**: Organizes multiple test instances, managing overall suite status, execution ordering, and statistics like counts of passed, failed, and disabled tests.
 
+### 2. Test Fixtures
 
-## Modular Structure of Test Components
+Test fixtures enable recurring data setup and teardown across tests, improving maintainability:
 
-### Test Suites and Fixtures
+- Defined as subclasses of `testing::Test`.
+- Each test runs in a fresh instance of the fixture, ensuring test isolation.
+- Support both per-test and per-suite setup/teardown through overridden methods.
 
-- **Test Suites:** GoogleTest organizes tests into named suites. Tests within a suite can share fixtures and related resources.
-- **Test Fixtures:** These are user-defined classes derived from `testing::Test` that provide shared data and helper methods. Each individual test gets its own fresh fixture instance, ensuring complete independence.
+Usage examples:
+```cpp
+class FooTest : public testing::Test {
+ protected:
+  void SetUp() override { /* per-test setup */ }
+  void TearDown() override { /* per-test cleanup */ }
 
-### Test Macros
+  static void SetUpTestSuite() { /* shared setup */ }
+  static void TearDownTestSuite() { /* shared cleanup */ }
+};
 
-- **`TEST()` Macro:** Defines a simple test that does not use a fixture.
-- **`TEST_F()` Macro:** Defines a test that uses a fixture, inheriting setup and teardown configuration.
+TEST_F(FooTest, TestName) {
+  EXPECT_EQ(DoSomething(), expected);
+}
+```
 
-Both macros register tests automatically for discovery, eliminating the need for manual test listing.
+### 3. Macros for Defining Tests
 
+GoogleTest provides a robust set of macros for intuitive test definition:
 
-## Automated Test Discovery
+- `TEST(TestSuiteName, TestName)`: Defines a simple test without a fixture.
+- `TEST_F(FixtureName, TestName)`: Defines a test using a test fixture for shared setup.
+- `TEST_P(TestFixtureName, TestName)`: Defines a parameterized test using test fixtures derived from `TestWithParam<T>`.
+- `INSTANTIATE_TEST_SUITE_P`: Instantiates parameterized test suites with specific parameter sets.
 
-GoogleTest employs a static registration system that automatically detects tests at compile time. This means:
+These macros handle automatic registration of tests with the framework at compile time, so there is no manual enumeration required.
 
-- You declare tests with macros like `TEST()` or `TEST_F()`.
-- GoogleTest internally registers each test and fixture with the test framework.
-- Tests are collected without requiring additional code.
+---
 
-This automation allows your test binary to execute any and all found tests by default, promoting ease of use and minimizing boilerplate.
+## Test Execution Lifecycle
 
+GoogleTest manages the entire lifecycle of test execution through the singleton `UnitTest` class:
 
-## Test Runner and Execution Lifecycle
+1. **Initialization**: `testing::InitGoogleTest()` parses command-line flags and prepares the environment.
+2. **Test Registration**: Tests and fixtures registered via macros are collected.
+3. **SetUp of Environments**: Global test environments (classes derived from `testing::Environment`) have their `SetUp()` methods invoked before tests start.
+4. **Test Suite Execution**: 
+   - For each suite (`TestSuite`), calls `SetUpTestSuite()`.
+   - Each test is executed in a fresh fixture instance:
+     - Fixture instantiated.
+     - Fixture `SetUp()` called.
+     - `TestBody()` runs (test logic).
+     - Fixture `TearDown()` called.
+     - Fixture destroyed.
+   - Suite calls `TearDownTestSuite()` once all tests complete.
+5. **Environment TearDown**: Global environments have their `TearDown()` methods called after all tests.
+6. **Results Reporting**: Listener mechanisms provide extensibility to report results, generate XML/JSON summaries, or customize output.
 
-The test runner is the component responsible for:
+The execution halts early if a fatal failure occurs unless flags to continue on failure are set.
 
-1. **Initialization:** Parsing command-line options, setting up the environment using `testing::InitGoogleTest()`.
-2. **Test Execution:** Iterating over all registered tests.
-   - For each test, GoogleTest:
-     - Creates a fresh test fixture instance.
-     - Runs any setup code (`SetUp()`).
-     - Executes the test body.
-     - Runs teardown code (`TearDown()`).
-     - Destroys the fixture.
-3. **Result Reporting:** Aggregates and prints test success, failure, and detailed diagnostics.
+### Event Listeners
 
-This lifecycle ensures:
+- GoogleTest's event listener mechanism (`TestEventListener`) allows users to attach custom observers to key lifecycle events such as test start, test end, assertion failures, and suite start/end.
+- Users can extend or replace the default console output or integrate with external systems.
 
-- **Isolation:** Each test runs independent of others.
-- **Repeatability:** Tests can be run in any order or individually.
-- **Detailed Feedback:** On a failure, users get precise file, line, and message information.
+---
 
+## GoogleMock Core Concepts
 
-## Scalability and Extensibility
+GoogleMock extends GoogleTest to provide powerful mocking for C++:
 
-GoogleTest’s architecture supports:
+### 1. Mock Methods
 
-- **Parameterized and Typed Tests:** Facilitated by extending the underlying xUnit architecture to run tests with varying data.
-- **Mocking Integration:** Seamless integration with GoogleMock to mock dependencies while preserving test structure.
-- **Test Filtering & Selection:** During runtime, users can specify which tests to run via command-line filters, optimizing test suites in CI pipelines or local development.
+- Defined via the `MOCK_METHOD` macro inside mock classes that inherit user class interfaces.
+- Supports overloading, const/non-const methods, templates, and more.
 
+### 2. Setting Expectations
 
-## How Components Interact: A High-Level Flow
+- Using `EXPECT_CALL` and `ON_CALL` macros to specify expected mock method invocations and behaviors.
+- Supports argument matching, call cardinality (e.g., `Times()`, `AtLeast()`), and sequences or ordering constraints.
+
+### 3. Strictness Modes
+
+- **NiceMock** suppresses warnings about uninteresting calls.
+- **NaggyMock** warns on uninteresting calls.
+- **StrictMock** treats uninteresting calls as fatal errors.
+
+### 4. Verification
+
+- GoogleMock automatically verifies that expectations are met.
+- Provides mechanisms to control mock object lifecycle and leak detection.
+
+---
+
+## Component Collaboration Diagram
 
 ```mermaid
 flowchart TD
-  Initialize[Test Runner Initialization]
-  Discover[Test Registration & Discovery]
-  RunTests[Run Tests Loop]
-  TestStart[Create Fixture & SetUp]
-  ExecuteTest[Execute Test Body]
-  TestFinish[TearDown & Destroy Fixture]
-  AggregateResults[Aggregate & Report Results]
-  End[Complete Testing]
 
-  Initialize --> Discover --> RunTests
-  RunTests --> TestStart --> ExecuteTest --> TestFinish --> RunTests
-  RunTests -->|All Tests Done| AggregateResults --> End
+  subgraph Test Lifecycle
+    UTest["UnitTest Singleton"] -->|manages| TSuite[TestSuite]
+    TSuite -->|contains| TInfo[TestInfo (Test)]
+    TInfo -->|creates| Fixture["Test Fixture Instance"]
+    Fixture -->|executes| TestBody["TestBody() Method"]
+    Fixture -->|calls| SetUp["SetUp()"]
+    Fixture -->|calls| TearDown["TearDown()"]
+  end
+
+  subgraph Global Setup
+    UTest --> Env["Global Environments (testing::Environment)"]
+    Env -->|SetUp| TSuite
+    TSuite -->|TearDown| Env
+  end
+
+  subgraph Execution Flow
+    UTest -->|invokes| Listeners["TestEventListeners"]
+    Listeners -->|OnTestStart/End| TInfo
+    Listeners -->|OnTestSuiteStart/End| TSuite
+    Listeners -->|OnAssertionResult| AssertionResult
+  end
+
+  subgraph GoogleMock
+    MockClass["Mock Class"] -.-> MOCK_METHOD["MOCK_METHOD macro"]
+    EXPECT_CALL -.-> MockClass
+    ON_CALL -.-> MockClass
+    MockClass -->|Verifies| Expectations["Expectations & Actions"]
+  end
+
+  UTest -.-> MockClass
+
+  classDef component fill:#dbf0f7,stroke:#1a6fb3,stroke-width:2px;
+  class UTest,TSuite,TInfo,Fixture,Env,Listeners,MockClass,EXPECT_CALL,ON_CALL,MOCK_METHOD,Expectations component;
 ```
 
+---
 
-## Practical Implications for Users
+## Practical Tips and Best Practices
 
-- **Writing Tests:** Use `TEST` for simple tests, and `TEST_F` when you require shared context via fixtures.
-- **Organizing Tests:** Group related tests into suites logically; use fixtures carefully for resource sharing.
-- **Running Tests:** Invoke the test executable with filtering options for selective execution.
-- **Extending Tests:** Leverage parameterized and typed tests for broad coverage with minimal duplication.
+- **Test Independence**: Each test runs with a fresh fixture. Avoid sharing mutable state without proper synchronization.
+- **Fixture Hierarchy**: Use inheritance carefully when building fixture classes to maximize code reuse.
+- **Use Macros Correctly**: `TEST()` for simple tests, `TEST_F()` for fixtures, and `TEST_P()` for parameterized tests.
+- **Leverage Event Listeners**: Customize output, add logging, or integrate with CI tools by attaching listeners.
+- **Mock Strictness**: Balance between NiceMock, NaggyMock, and StrictMock depending on your test's tolerance for uninteresting calls.
+- **Setup Shared Resources in `SetUpTestSuite()`**: Heavy resources should be initialized once per suite.
+- **Handle Fatal Failures**: Use assertions appropriately to fail fast when continuing doesn't make sense.
 
+---
 
-## Troubleshooting Common Issues Related to Architecture
+## Troubleshooting Common Issues
 
-- **Test Registration Issues:** Ensure your test files are linked and compiled properly so that test registration code runs.
-- **Fixture Initialization Problem:** Verify that your fixture class correctly derives from `testing::Test` and that you override `SetUp()` and `TearDown()` using the exact casing.
-- **Concurrent Test Failures:** GoogleTest runs tests sequentially by default; if your environment or tests exhibit threading issues, isolate parallelization outside GoogleTest.
-
-
-## Further Reading & Related Topics
-
-- [Test Definition & Execution](../../api-reference/core-test-api/test-definition-execution) for core test API details.
-- [Mocking Fundamentals with GoogleMock](../core-architecture/mocking-concepts) to understand test doubles interaction.
-- [Writing Your First Test](../../guides/getting-started/writing-your-first-test) to start practical test writing.
-- [Organizing Test Suites](../../guides/core-workflows/organizing-test-suites) for managing larger test projects.
-
+- **Tests Not Running**: Ensure tests are registered properly; do not miss `RUN_ALL_TESTS()` call.
+- **Mismatched Fixture Names**: Confirm `TEST_F()` first argument matches defined fixture class.
+- **Unrecognized Command-Line Flags**: Always call `InitGoogleTest()` before `RUN_ALL_TESTS()` to initialize flags.
+- **Mock Leaks in Death Tests**: Use `Mock::AllowLeak()` when mocks survive through death test process forks.
+- **Incorrect Parameterized Test Instantiation**: Match `TEST_P` definitions with corresponding `INSTANTIATE_TEST_SUITE_P` calls.
 
 ---
 
 ## Summary
 
-GoogleTest’s architecture harmonizes the xUnit model with C++ language features to deliver modular, automated, and extensible testing. The framework orchestrates test suites, fixtures, and runners to provide independent, repeatable test execution with minimal user overhead.
-
-Grasping this overview equips developers to leverage GoogleTest effectively, design resilient test structures, and scale testing workflows in diverse C++ projects.
-
+This architecture overview equips you with the foundational knowledge of GoogleTest and GoogleMock's core classes, macros, and execution flow. By understanding the lifecycle from test registration through execution and reporting, along with mocking strategies, you can build reliable and maintainable C++ test suites.
 
 ---
 
-<Info>
-For a deep dive into detailed concepts, see the [GoogleTest Primer](../../docs/primer.md) and [Test Definition & Execution API](../../api-reference/core-test-api/test-definition-execution.md).
-</Info>
+## Related Documentation
 
-<Check>
-Pro Tip: Organize your tests into logical suites using fixtures to maximize reuse and clarity.
-</Check>
-
----
-
-## Appendix: System Architecture Diagram
-
-```mermaid
-flowchart TD
-  subgraph Runner [Test Runner]
-    direction TB
-    Init["InitGoogleTest & CLI Parsing"]
-    Discover["Test Discovery & Registration"]
-    Execute["Run All Registered Tests"]
-    Report["Result Aggregation & Reporting"]
-  end
-
-  subgraph TestExecution [Test Execution Loop]
-    direction TB
-    Setup["Fixture Creation & SetUp()"]
-    TestBody["Execute Test Body"]
-    TearDown["Call TearDown() & Destroy Fixture"]
-  end
-
-  Init --> Discover
-  Discover --> Execute
-  Execute --> Setup
-  Setup --> TestBody
-  TestBody --> TearDown
-  TearDown --> Execute
-  Execute -->|All Tests Done| Report
-
-  Report --> End(["End / Exit"])
-```
+- [Core Testing Concepts](../overview/core_fundamentals/core_concepts.md) — Fundamental testing elements.
+- [Test Case and Suite Definition](../../api-reference/core-testing-api/test-case-definition.md) — Detailed API for test definitions.
+- [Setting Expectations and Actions](../../guides/mocking-and-advanced-testing/setting-expectations-and-actions.md) — Guide to controlling mock behavior.
+- [Writing Your First Test](../../getting-started/first-test-and-validation/writing-your-first-test.md) — Hands-on tutorial.
+- [Test Discovery and Execution](../overview/core_fundamentals/test_discovery_execution.md) — How tests are discovered and run.
+- [Best Practices for Mock Usage](../../guides/mocking-and-advanced-testing/best-practices-for-mock-usage.md) — Tips to avoid brittle mock tests.
 
 ---
 
-## How This Page Fits into GoogleTest Documentation
+## Next Steps
 
-This architecture overview is foundational in the "Concepts" section under "Core Architecture & Test Model." It bridges introductory material like the Primer and advanced topics such as mocking and parameterized tests, helping you connect practical test writing with the underlying system behavior.
-
-Users progressing from this guide will find the [Test Lifecycle](../core-architecture/test-lifecycle) and [Mocking Concepts](../core-architecture/mocking-concepts) especially valuable as next logical steps.
-
-
----
-
-## Source Reference
-
-You can explore the source code of GoogleTest, including test registration and execution mechanisms, in the [GitHub repository](https://github.com/google/googletest) (branch: main). The architecture components discussed here mainly reside within the `googletest` folder, notably the core testing framework headers and implementations.
+Begin applying this knowledge by writing small tests using `TEST` and `TEST_F` macros. Progress to parameterized testing with `TEST_P` and master mock classes by exploring expectation setting and verification patterns. Leverage event listeners to customize the test reporting to fit your project's needs.
